<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="47dp"
        android:text="@string/bunker"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="236dp"
        android:layout_height="78dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="236dp"
        android:layout_height="78dp"
        android:onClick="joinDialog"
        android:text="@string/join_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton"
        app:layout_constraintVertical_bias="0.196" />

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:background="@null"
        android:contentDescription="@string/description_settings"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinButton"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@drawable/settings" />

    <ImageButton
        android:id="@+id/profileBtn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@null"
        android:contentDescription="@string/profile"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinButton"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingBtn"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/profileBtn"
        app:layout_constraintTop_toBottomOf="@+id/joinButton"
        app:layout_constraintVertical_bias="0.822" />


</androidx.constraintlayout.widget.ConstraintLayout>